# HFT-Order-Book

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  RiskChecker.h
.github/workflows/: ci.yml  cmake-multi-platform.yml
benchmarks/: bench_harness.h  bench_main.cpp
config/: simulator.cfg  uat.cfg
gateway/: FIXGateway.cpp  FIXGateway.h  Killswitch.h  MessageTranslator.h
include/: EventLog.h  OrderEvent.h  OrderManager.h  PositionTracker.h
src/: main.cpp
tests/: test_EventLog.cpp  test_FIXGateway.cpp  test_Killswitch.cpp  test_MessageTranslator.cpp  test_OrderEvent.cpp  test_OrderManager.cpp  test_PositionTracker.cpp  test_RiskChecker.cpp  test_main.cpp  test_simulation.cpp
tests/fixtures/: sample_msgs.h
